--- a/styles/styles.css
+++ b/styles/styles.css
@@ -50,12 +50,12 @@ h1{
 
 .color-RGB, .salida-color{
     font-size: 0.8rem;
-    background-color: gray;
+    background-color: #808080;
     padding: 0.65rem;
     margin-left: 1rem;
     height: 2rem;
     width: 11rem;
-    color: #fff;
+    color: #f2f2f2;
     border-radius: 10px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
@@ -64,7 +64,7 @@ h1{
 }
 
 input[type="color"]{
-    background-color: #fff;
+    background-color: #f2f2f2;
     padding: 20px;
     width: 5rem;
     height: 5rem;
